crates/cli/tests/snapshots/lib__run@poly.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/poly.nemo
---
Success: 42
