crates/cli/tests/snapshots/lib__run@return.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/return.nemo
---
Success: 0
10
11
12
