crates/cli/tests/snapshots/lib__run@sorts.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/sorts.nemo
---
Success: 0
0
1
2
3
4
5
5
6
7
8
9
0
1
2
3
4
5
6
7
8
9
0
1
2
3
4
5
6
7
8
9
0
1
2
3
4
5
6
7
8
9
10
0
1
2
3
4
5
6
7
8
9
