crates/cli/tests/snapshots/lib__run@tuples.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/tuples.nemo
---
Success: 0
1
1
