crates/cli/tests/snapshots/lib__run@unary_op.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/unary_op.nemo
---
Success: 0
-1
-1
-10
-20
20
5
-11
2
0
-2
