crates/cli/tests/snapshots/lib__run@variants.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/variants.nemo
---
Success: 0
a
b
c

2
3.1
4
